# drone-sim-ppo

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
assets/mjcf/: quadrotor.xml
configs/: default.toml  gpu_centering.toml  gpu_intro_axisfix.toml  gpu_intro_consolidate.toml  gpu_intro_finetune.toml  gpu_intro_focus.toml  gpu_intro_residual.toml  gpu_intro_terminal.toml  gpu_low_tilt.toml  gpu_stability_centering.toml  gpu_stability_reward.toml  gpu_stable.toml
scripts/: bench_env.py  compare_runs.py  evaluate.py  experiment.py  generate_data.py  run_q1.py  search_intro_controller.py  stress_test.py  test_env.py  train.py  train_perception.py  train_torch_ppo.py  validate_ekf.py  visual_test.py  visualize.py
src/dronesim/: config.py  types.py
src/dronesim/bridge/: mavlink_client.py  obs_builder.py  q1_runner.py  vision_pipeline.py
src/dronesim/ekf/: __init__.py  gate_detector.py  gate_estimator.py  gate_filter.py
src/dronesim/envs/: __init__.py  drone_race_env.py  warp_vec_env.py
src/dronesim/perception/: dataset.py  unet.py
src/dronesim/sim/: attitude_controller.py  env.py  mixer.py
src/dronesim/tasks/: curriculum.py  guidance.py  rewards.py  termination.py
src/dronesim/training/: callbacks.py  eval_utils.py  torch_ppo.py
tests/: test_config.py  test_curriculum.py  test_env.py  test_rewards.py  test_torch_ppo.py  test_warp_vec_env.py
